--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "prime-auth",
   "version": "1.0.0",
+  "type": "module",
   "description": "Implementation of Industry Standard Authentication System",
   "main": "server.js",
   "scripts": {
+    "dev":"nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +20,8 @@
   "homepage": "https://github.com/ankitnayak09/PrimeAuth#readme",
   "dependencies": {
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
