Add email configuration and utility functions for sending emails

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,8 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
 ACCESS_TOKEN_SECRET=
-ACCESS_TOKEN_EXPIRY=
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXPIRY=7d
+EMAIL_USER=
+EMAIL_PASS=
