--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,7 @@ ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=
 REFRESH_TOKEN_EXPIRY=7d
+EMAIL_HOST=
 EMAIL_USER=
 EMAIL_PASS=
+EMAIL_PORT=
